2024-01-24  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-hist-previous-directory):  Bugfix: stop creating windows above
	others.

2024-01-23  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-trash-quick-delete): Bugfix: format of list
	sent to function dired--internal-do-deletions

2024-01-22  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--show-more-file-info): Apply quotes and
	escapes for messy file names.

2024-01-22  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-hist-find-alternate-file): ): Bugfix: move focus
	to opened files.

2024-01-22  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--show-more-file-info-cmd): Redefine from
	string to cons.
	(diredc-show-more-file-info, diredc--show-more-file-info): Improve
	display output.
	(diredc-hist-change-directory): Bugfix: stop creating windows above
	others.

2024-01-18  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--guess-and-do-async-shell-command): New
	feature: For file-types associated with shell commands in variable
	'dired-guess-shell-alist-user', pressing RETURN on that file runs
	the first of those shell commands, asynchronously.
	(diredc-hist-find-alternate-file): Use it, but not for C-u RETURN.

2024-01-18  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-frame-parameters)
	(diredc-frame-inherited-parameters)
	(diredc-hist-find-alternate-file, diredc-recover, diredc): New
	feature: customizable frame-parameters.

2024-01-15  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-recover-schemes, diredc-hist-up-directory)
	(diredc-hist-find-alternate-file, diredc-exit, diredc-recover)
	(diredc-hist-duplicate): Bugfix: stop creating windows above
	others
	(diredc-hist-find-alternate-file, diredc-exit, diredc-recover):
	Bugfix: stop creating windows above others

2022-01-12  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse--hook-function): Fontify browse
	buffers.

2021-06-13  Boruch Baum  <boruch_baum@gmx.com>
