@@ -1,3 +1,11 @@
+2024-01-31  Boruch Baum  <boruch_baum@gmx.com>
+
+	* diredc.el (diredc-shell--bind-keys): Collect bindings in a
+	function in order to be used by different launchers.
+	(diredc-shell--launch-shell, diredc-shell--launch-eshell)
+	(diredc-shell--launch-emulator): Use it.
+	(diredc-shell): Remove duplication.
+
 2024-01-24  Boruch Baum  <boruch_baum@gmx.com>
 
 	* diredc.el (diredc-hist-previous-directory):  Bugfix: stop creating windows above
